comment out not working part

--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -7,8 +7,8 @@
 <body>
     <h1>Collection Central</h1>
     <h2>I collect, you collect, we all collect stuff.</h2>
-    <p>Please sign-in to see your collections:</p>
-    <p>Not working yet!</p>
+    <!-- <p>Please sign-in to see your collections:</p>
+    <p>Not working yet!</p> -->
     <!-- <form action="/logIn" method="POST" id="logIn">
         <label for="name ">Name:</label><br>
         <input type="text" id="name" name="name"><br> 
