--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Collection Central</h1>
-    <h2>I collect, you collect, we all collect stuff.</h2>
+    <h2>What are you collecting?</h2>
     <!-- <p>Please sign-in to see your collections:</p>
     <p>Not working yet!</p> -->
     <!-- <form action="/logIn" method="POST" id="logIn">
@@ -17,7 +17,7 @@
         <input type="submit" value="Submit">      -->
         
         <!-- TODO Create collections dynamically based on the log-in -->
-    <form action="/seeCollection" method="GET" id="seecollection"></form>
+    <form action="/seeCollection" method="GET" id="seecollection">
         <p>Please select a collection:</p>
         <select name='collection'>
             <option value='Squishmallows'>Squishmallows</option>
@@ -27,8 +27,8 @@
         </select>
         <input type="submit" value="Submit">
 
-        
-
     </form>
+    
+   
 </body>
 </html>
