return db results

--- a/public/views/collectionCentral.ejs
+++ b/public/views/collectionCentral.ejs
@@ -27,9 +27,8 @@
         <input type="button" name="choose_collection" id="select_btn" value="Select Collection" onclick="chooseCollection()">
 
     </form>
-    <div>
-        <h2>Collection:</h2>
-        <ul id="collectionResults"></ul>
+    <div id="collectionResults">
+       <!--dynamically created with chooseCollection()-->
     </div>
     
    
