/setItem post added

--- a/public/views/collectionCentral.ejs
+++ b/public/views/collectionCentral.ejs
@@ -27,9 +27,9 @@
         <input type="button" name="choose_collection" id="select_btn" value="Select Collection" onclick="chooseCollection()">
 
     </form>
-    <div id="collectionResults">
-       <!--dynamically created with chooseCollection()-->
-    </div>
+    <div id="collectionResults"><!--dynamically created with chooseCollection()--></div>
+    <div id="addItem"><!--dynamically created with chooseCollection()--></div>
+    <div id="addResults"><!--dynamically created with addItemtoDB()--></div>
     
    
 </body>
