--- a/public/views/collectionCentral.ejs
+++ b/public/views/collectionCentral.ejs
@@ -1,35 +1,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Collection Central</title>
+    
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="/stylesheets/cover.css">
     <script src="views/collectionCentral-clientside.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    
+    
 </head>
 <body>
-    <h1>Collection Central</h1>
-    <h2>What are you collecting?</h2>
-    <p>Please sign-in to see your collections:</p>
-    
-    <form action="#" method="POST" id="logIn">
-        <label for="name ">Name:</label><br>
-        <input type="text" id="name" name="name"><br> 
-        <label for="password ">Password:</label><br>
-        <input type="text" id="password" name="password"><br>
-        <input type="button" name="submit_form" id="btn_submit" value="Log In" onclick="submitUser()">  
-    </form> 
+    <div class="site-wrapper">
+        <div class="site-wrapper-inner">
+            <div class="cover-container">
+                <div class="inner cover">
+                    <div class="container-fluid">
+                        <h1>Collection Central</h1>
+                        <h2>What are you collecting?</h2>
+                        <p>Please Log In to see your collections or Sign Up to get started:</p>
+                        
+                        <form action="#" method="POST" id="logIn">
+                            <label for="name ">Name:</label><br>
+                            <input type="text" id="name" name="name"><br> 
+                            <label for="password ">Password:</label><br>
+                            <input type="text" id="password" name="password"><br>
+                            <input type="button" name="submit_form" id="btn_submit" value="Log In" onclick="submitUser()">
+                            <input type="button" name="newPerson_form" id="newPerson_submit" value="Sign Me Up!" onclick="newUser()">  
+                        </form> 
+                        <div id="clientResults"></div>
+                        </div>
+                    <div class="container-fluid">
+                        <h3>You can see existing collections or start a new collection</h3>
+                        <p>Please select a collection:</p>
+                        <!-- TODO Create collections dynamically based on the log-in -->
+                        <form action="#" method="GET" id="chooseCollection">
+                            <select name='collection' id="collectionName"><!--dynamically created with submitUser()-->
+                            </select>
+                            <input type="button" name="choose_collection" id="select_btn" value="Select Collection" onclick="chooseCollection()">
 
-    <p>Please select a collection:</p>
-    <!-- TODO Create collections dynamically based on the log-in -->
-    <form action="#" method="GET" id="chooseCollection">
-        <select name='collection' id="collectionName"><!--dynamically created with submitUser()-->
-        </select>
-        <input type="button" name="choose_collection" id="select_btn" value="Select Collection" onclick="chooseCollection()">
-
-    </form>
-    <div id="collectionResults"><!--dynamically created with chooseCollection()--></div>
-    <div id="addItem"><!--dynamically created with chooseCollection()--></div>
-    <div id="addResults"><!--dynamically created with addItemtoDB()--></div>
+                        </form>
+                        <button type="button" id="newCollect" onclick="newCollection()">Start a new collection</button> 
+                    
+                        <div id="collectionResults"><!--dynamically created with chooseCollection()--></div>
+                        <div id="addItem"><!--dynamically created with chooseCollection()--></div>
+                        <div id="addResults"><!--dynamically created with addItemtoDB()--></div>
+                        <div id="newCollectForm"></div>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div> 
     
    
 </body>
