--- a/public/views/collectionCentral.ejs
+++ b/public/views/collectionCentral.ejs
@@ -24,13 +24,13 @@
                     <!--<div class="container-fluid">-->
                         <h1>Collection Central</h1>
                         <h2>What are you collecting?</h2>
-                        <p>Please Log In to see your collections or Sign Up to get started:</p>
+                        <p id="startUp">Please Log In to see your collections or Sign Up to get started:</p>
                         
                         <form action="#" method="POST" id="logIn">
                             <label for="name ">Name:</label><br>
                             <input type="text" id="name" name="name"><br> 
                             <label for="password ">Password:</label><br>
-                            <input type="text" id="password" name="password"><br><br>
+                            <input type="password" id="password" name="password"><br><br>
                             <input type="button" name="submit_form" id="btn_submit" value="Log In" onclick="submitUser()">
                             <input type="button" name="newPerson_form" id="newPerson_submit" value="Sign Me Up!" onclick="newUser()">  
                         </form> 
